--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>One Word Wiki</title>
-    <meta name="description" content="">
+    <meta name="description" content="This is One Word Wiki, a wiki with only one word to edit.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -16,6 +16,7 @@
 
   <body>
 
+    <div class="container js-app"></div>
     <script src="js/bundle.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
