add some styles and fonts and you know design stuff

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
 
+    <script src="//use.typekit.net/gdj7euz.js"></script>
+    <script>try{Typekit.load();}catch(e){}</script>
+
   </head>
 
   <body>
