update title with word. more one word wiki -> edit this word changes

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>One Word Wiki</title>
-    <meta name="description" content="This is One Word Wiki, a wiki with only one word to edit.">
+    <title>Edit This Word</title>
+    <meta name="description" content="Edit This Word is a web page with one word that anyone can edit.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
