--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
 
+    <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="http://localhost:8080/favicon.ico?v=2">
+
     <script src="//use.typekit.net/gdj7euz.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
 
