--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Edit This Word</title>
-    <meta name="description" content="Edit This Word is a web page with one word that anyone can edit.">
+    <title>OneWord.Wiki</title>
+    <meta name="description" content="OneWord.Wiki is a web page with one word that anyone can edit.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
 
-    <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="http://localhost:8080/favicon.ico?v=2">
+    <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="http://localhost:8080/favicon.ico?v=3">
 
     <script src="//use.typekit.net/gdj7euz.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
