--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,10 @@
 <!doctype html><html><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><title>OneWord.Wiki</title><meta name=description content="OneWord.Wiki is a web page with one word that anyone can edit."><meta name=viewport content="width=device-width, initial-scale=1"><link rel=stylesheet href=css/app.min.css><script src=//use.typekit.net/gdj7euz.js></script><script>try{Typekit.load();}catch(e){}</script></head><body><div class="container js-app"></div><script src=js/bundle.js></script><script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-59762987-1', 'auto');
+      ga('send', 'pageview');
+
     </script></body></html>
